# fcw.org-server

./: .directory  .gitattributes  .gitignore  Dockerfile  Multipass.md  Mutilpass.md  README.brava  README.md  Vagrantfile  VagrantfileMac  changelog.txt  docker-compose.yml  fcw-multipass.sh  index.jsp  mp2-valhalla.serv  multipass-entrypoint.sh  remake-multipass.sh  terrain.ruleset
freeciv/freeciv/data/: Makefile.am  ag.serv  ag2.serv  amplio2.tilespec  classicplus.serv  helpdata.txt  maptest.serv  mp2-ag.serv  mp2-brava.serv  mp2-elephant.serv  mp2.serv  mp2b-valhalla.serv  mp2b.serv  mp2c-desert.serv  mp2c-japan.serv  mp2c-occ.serv  mp2c.serv  mp2d.serv  mp2sandbox.serv  mpplus.serv  sandbox.serv  stdsounds.soundspec
freeciv/freeciv/data/ag/: buildings.ruleset  default.lua  effects.ruleset  game.ruleset  governments.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/ag2/: README.ag  buildings.ruleset  changelog.txt  effects.ruleset  game.ruleset  script.lua  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/alien/: README.alien  buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/amplio2/: .gitignore  STYLE_GUIDE.md  activities.spec  animals.spec  bases.spec  canal.spec  cities.spec  desert.spec  grassland.spec  grid.spec  highway.spec  maglev.spec  plains.spec  seabridge.spec  swamp.spec  swords.spec  terrain1.spec  tiles.spec  units.spec  units_oversize.spec  upkeep.spec  veterancy.spec  walls.spec  water.xcf
freeciv/freeciv/data/brava/: buildings.ruleset  game.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/civ1/: README.civ1  buildings.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/civ2/: README.civ2  buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/civ2civ3/: README.civ2civ3  buildings.ruleset  effects.ruleset  game.ruleset  governments.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/classic/: README.classic  buildings.ruleset  effects.ruleset  game.ruleset  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/classicplus/: Makefile.am  README.txt  buildings.ruleset  changelog.txt  default.lua  effects.ruleset  game.ruleset  governments.ruleset  script.lua  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/default/: default.lua  nationlist.ruleset
freeciv/freeciv/data/experimental/: buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/freeciv/data/flags/: Makefile.am
freeciv/freeciv/data/granularity/: effects.ruleset  game.ruleset  techs.ruleset  terrain.ruleset
freeciv/freeciv/data/maptest/: README.maptest  effects.ruleset  game.ruleset  script.lua  units.ruleset
freeciv/freeciv/data/misc/: buildings-large.spec  buildings.spec  citybar.spec  events.spec  flags-large.spec  flags-large.spec.deprecated  flags.spec  governments.spec  shields-large.spec  shields.spec  small.spec  specialists.spec  techs.spec  (+2 more)
(+879 files in other folders)
