## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/mp2-brava

pkgdata_DATA =			\
	buildings.ruleset	\
	cities.ruleset		\
	effects.ruleset		\
	game.ruleset		\
	governments.ruleset	\
	nations.ruleset		\
	default.lua             \
	script.lua		\
	parser.lua		\
	styles.ruleset		\
	techs.ruleset		\
	terrain.ruleset		\
	units.ruleset		\
	README.brava

EXTRA_DIST = $(pkgdata_DATA)
