## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/mpplus

pkgdata_DATA =			\
	buildings.ruleset	\
	cities.ruleset		\
	effects.ruleset		\
	game.ruleset		\
	governments.ruleset	\
	nations.ruleset		\
	script.lua		\
	parser.lua		\
	styles.ruleset		\
	techs.ruleset		\
	terrain.ruleset		\
	units.ruleset		\
	README.mpplus

EXTRA_DIST = $(pkgdata_DATA)
